--- a/docs.tex
+++ b/docs.tex
@@ -1,8 +1,8 @@
-\documentclass[12pt, letterpaper]{article}
+\documentclass[12pt, letterpaper, slovak]{article}
 \usepackage[
     backend=biber,
     style=numeric,
-]{biblatex} 
+]{biblatex}
 \usepackage{graphicx}
 \usepackage{enumitem}
 \usepackage{pdfpages}
@@ -10,6 +10,7 @@
 \usepackage[acronym,nomain,shortcuts,nonumberlist]{glossaries}
 \usepackage[utf8]{inputenc}
 \usepackage[toc,page]{appendix}
+\usepackage[T1]{fontenc}
 
 \graphicspath{{diagrams/}}
 \addbibresource{sources.bib}
@@ -169,17 +170,17 @@ The implementation section outlines some selected methods which were implemented
 
 The purpose of this thesis was to analyze, implement, and test various software-based fault tolerance methods to improve the reliability on embedded systems.
 
-Several prominent software-only fault tolerance techniques were analyzed, including generalized single and multi-version programming methods, but also specific techniques such as \acrshort{eddi}, \acrshort{cfcss} and \acrshort{swift}. From this analysis, a subset of techniques was selected for implementation based on their practicality, fault coverage, and relevance to embedded systems. These included checkpoint/restart mechanisms, control-flow integrity verification, variable protection strategies, and multiversion programming.
+Several prominent software-only fault tolerance techniques were analyzed, including general single and multi-version programming methods, but also specific techniques such as \acrshort{eddi}, \acrshort{cfcss} and \acrshort{swift}. From this analysis, a subset of techniques was selected for implementation based on their practicality, fault coverage, and relevance to embedded systems. These included checkpoint and restart mechanisms, control-flow checking, variable protection strategies, and some forms of multi-version programming.
 
-The selected techniques were implemented in Rust and tested within a FreeRTOS-based environment on a simulated 32-bit RISC-V platform. Faults were injected into selected processor components—including general-purpose registers, control units, and the ALU—to simulate common transient error scenarios. RAM was excluded from fault injection due to the limitations of software-only recovery mechanisms in the presence of persistent instruction memory corruption.
+The selected techniques were implemented in Rust and tested within a FreeRTOS-based environment on a simulated 32-bit RISC-V platform. Faults were injected into selected processor components, including general-purpose registers, control units, and the ALU, to simulate common transient error scenarios. RAM was excluded from fault injection due to the limitations of software-only recovery mechanisms.
 
 Checkpoint and restart was implemented as means to facilitate recovery and act as a building block for multi-version techniques. Checkpoint and restart proved to be one of the most reliable fault tolerance methods as it could be added to any part of the software with ease and it served as good protection against timeouts, ensuring control could always be transferred back to the block from which the checkpoint was created.
 
 CFCSS was implemented to examine Rust's capability to implmenent techniques that are usually only thought of as "instruction level". Rust's macro system was used for this purpose and it proved to be a feasible alternative to what would otherwise have to be implemented as compiler level protection. Due to nature of Rust macros and syntax, however, CFCSS could not be applied to the entire application, but only to designated modules, limiting the coverage. CFCSS also proved to be not entirely compatible with checkpoint and restart due to side-effects in static variables required by CFCSS. Future research could be conducted into the implementation of CFCSS directly into Rust's compiler or LLVM pipeline, as well as adding full compatibility with checkpoint and restart by securing the static variables.
 
-Various multi-version techniques were also tried for select benchmarks where multi-version programming was fasible. Recovery blocks was implemented for fibonacci sequence benchmark, and various multi-version-inspired forms of protection were used for the other benchmark. Implementation of multi-version techniques proved relatively easy thanks to Rust's high-level concepts such as generic variables, however, their benefit could not be ascertained. The longer execution time of the benchmarks, when using multi-version, often outweight any benefit, given the increased time window for faults to manifest. This might arguably only be an issue in environments with high saturation of faults, such as our testing conditions.
+Various multi-version techniques were also tried for select benchmarks where multi-version programming was fasible. Recovery blocks was implemented for Fibonacci sequence benchmark, and various multi-version-inspired forms of protection were used for the other benchmark. Implementation of multi-version techniques proved relatively easy thanks to Rust's high-level concepts such as generic variables. However, the longer execution time of the mutli-version benchmarks often outweight any benefit, given the increased time window for faults to manifest. Further research needs to be conducted to ascertain the benefits of multi-version programming.
 
-The software-implemented fault tolerance techniques did increase the success rate of our benchmark marginally. They also increased the reporting rate of errors and significantly decreased timeouts. We can say, with reasonable certainty, that the aforementioned methods did contribute positively towards the fault detection and tolerance of the system.
+The software-implemented fault tolerance techniques did increase the success rate of our benchmark marginally. They also increased the reporting rate of errors and significantly decreased timeouts stemming from FreeRTOS scheduler. We can say, with reasonable certainty, that the aforementioned methods did contribute positively towards the fault detection and tolerance of the system.
 
 Future work could explore hybrid approaches of combining code-level fault-tolerance techniques with compiler implemented ones. By extending the compiler pipeline of Rust, techniques such as CFCSS or SWIFT could be implemented at IR level and further boost the fault detection and tolerance of the software.
 
@@ -187,16 +188,13 @@ Future work could explore hybrid approaches of combining code-level fault-tolera
 
 \clearpage
 \section{Resumé}
-
-Intro
-
 S rastúcim dopytom po výkonnom softvéri pre zabudované systémy prichádza aj náročná úloha zabezpečiť ich bezchybnú funkčnosť. Zložitosť systémov neustále rastie - či už ide o hardvér alebo softvér - čo znamená aj viac miest, kde sa môžu objaviť chyby.
 
-Chyby môžu byť spôsobené vonkajšími faktormi, napríklad žiarením vo vesmíre, ale aj chybami pri vývoji softvéru. Keďže softvér a hardvér sú čoraz zložitejšie, je nepravdepodobné, že sa nám v blízkej budúcnosti podarí vytvoriť úplne bezchybné systémy. Preto je odolnosť voči chybám dôležitou súčasťou návrhu softvéru, najmä v kritických systémoch, kde by zlyhanie mohlo ohroziť ľudské životy. Zároveň však platí, že zvýšená spoľahlivosť často znamená kompromis - napríklad v podobe nižšieho výkonu alebo vyššej náročnosti vývoja.
+Chyby môžu byť spôsobené vonkajšími faktormi, napríklad žiarením vo vesmíre, ale aj chybami pri vývoji softvéru. Keďže softvér a hardvér sa stáva čoraz zložitejším, je nepravdepodobné, že sa nám v blízkej budúcnosti podarí vytvoriť úplne bezchybné systémy. Preto je odolnosť voči chybám dôležitou súčasťou návrhu softvéru, najmä v kritických systémoch, kde by zlyhanie mohlo ohroziť ľudské životy. Zároveň však platí, že zvýšená spoľahlivosť často znamená kompromis - napríklad v podobe nižšieho výkonu alebo vyššej náročnosti vývoja.
 
-Tradične sa odolnosť voči chybám riešila hardvérovo, napríklad zdvojením alebo špeciálnym navrhnutím komponentov. Tento prístup je však finančne aj časovo veľmi náročný, keďže si vyžaduje výrobu špecializovaného hardvéru. V posledných rokoch sa preto čoraz častejšie využíva lacnejšie riešenie - použitie bežne dostupných súčiastok v kombinácii so softvérovými technikami, ktoré zabezpečujú odolnosť voči chybám.
+Tradične sa odolnosť voči chybám riešila hardvérovo, napríklad duplikáciou alebo použitím špeciálnych, odolných komponentov. Tento prístup je však finančne aj časovo veľmi náročný, keďže si vyžaduje výrobu špecializovaného hardvéru. V posledných rokoch sa preto čoraz častejšie využíva lacnejšie riešenie - použitie bežne dostupných súčiastok v kombinácii so softvérovými technikami, ktoré zabezpečujú odolnosť voči chybám.
 
-Táto práca sa zameriava na analýzu rôznych softvérových metód na zvýšenie odolnosti voči chybám. Preskúmame ich výhody a nevýhody a vybudujeme praktickú ukážku bežiacu na FreeRTOS a RISC-V jadre, ktorá implementuje vybrané metódy v programovacom jazyku Rust a overí ich účinnosť.
+Táto práca sa zameriava na analýzu rôznych softvérových metód na zvýšenie odolnosti voči chybám. Preskúmame ich výhody a nevýhody a implementujeme praktickú ukážku bežiacu na FreeRTOS a RISC-V jadre, ktorá implementuje vybrané metódy v programovacom jazyku Rust a overí ich účinnosť.
 
 Pre zabezpečenie konzistencie a jednotnosti pojmov používaných v tejto práci sa opierame o terminológiu definovanú v publikácii \cite{1335465}. Nižšie uvádzame vysvetlenie najdôležitejších a najčastejšie používaných pojmov. Ostatné špecifické termíny budú vysvetlené priamo v texte, keď sa prvýkrát objavia.
 
@@ -204,9 +202,9 @@ Pre zabezpečenie konzistencie a jednotnosti pojmov používaných v tejto prác
 
 Všetko, čo je súčasťou systému, sa nachádza v rámci tzv. \textbf{hranice systému}. Ide o pomyselnú čiaru, ktorá oddeľuje náš systém od jeho okolia.
 
-\textbf{Zlyhanie} je situácia, keď systém prestane správne poskytovať službu. Ide o prechod zo stavu správneho fungovania do nesprávneho. Napríklad, ak prestane fungovať vstupno-výstupné zariadenie, ktoré je kľúčové pre činnosť systému. Zlyhanie je dôsledkom \textbf{chyby}, čo je odchýlka od správneho stavu systému - napríklad neočakávaná zmena výstupnej hodnoty.
+\textbf{Zlyhanie} je situácia, keď systém prestane správne poskytovať službu. Ide o prechod zo stavu správneho fungovania do nesprávneho \cite{1335465}. Napríklad, ak prestane fungovať vstupno-výstupné zariadenie, ktoré je kľúčové pre činnosť systému. Zlyhanie je dôsledkom \textbf{chyby} (error), čo je odchýlka od správneho stavu systému - napríklad neočakávaná zmena výstupnej hodnoty.
 
-Chyba býva spôsobená \textbf{poruchou}, teda skutočnou alebo predpokladanou príčinou chyby. Porucha môže byť dlho neaktívna (latentná), až kým sa neprejaví a nespôsobí chybu. Príkladom môže byť tzv. bit-flip v pamäti spôsobený žiarením.
+Chyba býva spôsobená \textbf{poruchou} (fault), teda skutočnou alebo predpokladanou príčinou chyby \cite{shubu}. Porucha môže byť dlho neaktívna (latentná), až kým sa neprejaví a nespôsobí chybu \cite{1335465}. Príkladom môže byť tzv. bit-flip v pamäti spôsobený žiarením.
 
 \textbf{Odolnosť voči poruchám} (angl. \textit{fault tolerance}) je schopnosť systému pokračovať vo svojej činnosti aj v prípade, že sa vyskytne porucha. Napríklad systém môže správne fungovať aj s jedným nefunkčným senzorom. Ak systém nedokáže plne splniť všetky svoje funkcie, ale stále je aspoň čiastočne použiteľný, hovoríme o \textbf{degradácii služby} - napríklad ak sa zníži frekvencia meraní alebo sa poskytujú len približné údaje.
 
@@ -216,53 +214,63 @@ Softvérové techniky zamerané na zvýšenie spoľahlivosti systémov možno ro
 
 \subsection*{Jedno-verziové metódy (Single-Version)}
 
-Tieto metódy sú navrhnuté tak, aby fungovali v rámci jednej verzie softvéru. Ich cieľom je rozpoznať chyby počas behu programu a reagovať na ne vhodným spôsobom, bez potreby redundantného vykonávania viacerých verzií.
+Tieto metódy sú navrhnuté tak, aby fungovali v rámci jednej verzie softvéru. Ich cieľom je rozpoznať chyby počas behu programu a reagovať na ne vhodným spôsobom, bez potreby redundantného vykonávania viacerých verzií \cite{nasa:sft}.
 
 \begin{itemize}
-\item \textbf{Detekcia chýb (Error Detection)} - Monitorovanie behu programu s cieľom odhaliť nezvyčajné správanie alebo neplatné hodnoty, ktoré môžu naznačovať výskyt chyby.
-\item \textbf{Obnova po chybe (Fault Recovery)} - Mechanizmy umožňujúce návrat do bezpečného stavu, ako napríklad kontrolné body (checkpoints) a návrat do známeho funkčného stavu.
+\item \textbf{Detekcia chýb (Error Detection)} - Monitorovanie behu programu s cieľom odhaliť nezvyčajné správanie alebo neplatné hodnoty, ktoré môžu naznačovať výskyt chyby \cite{nasa:sft}.
+\item \textbf{Obnova po chybe (Fault Recovery)} - Mechanizmy umožňujúce návrat do bezpečného stavu, ako napríklad kontrolné body (checkpoints) a návrat do známeho funkčného stavu. Delia sa na \textit{backward recovery} a \textit{forward recovery} \cite{shubu}. 
 \end{itemize}
 
 \subsection*{Viac-verziové metódy (Multi-Version)}
 
-Tieto metódy využívajú viaceré nezávislé verzie softvéru alebo algoritmov, ktoré vykonávajú rovnakú úlohu. Porovnávaním výsledkov týchto verzií je možné odhaliť chyby a zabezpečiť korektné výstupy.
+Tieto metódy využívajú viaceré nezávislé verzie softvéru alebo algoritmov, ktoré vykonávajú rovnakú úlohu. Porovnávaním výsledkov týchto verzií je možné odhaliť chyby a zabezpečiť korektné výstupy \cite{nasa:sft}.
 
 \begin{itemize}
-\item \textbf{Recovery Blocks} - Používajú hlavnú verziu kódu spolu s alternatívnymi blokmi, ktoré sa vykonajú, ak hlavná verzia zlyhá pri vopred definovanej kontrole správnosti (acceptance test).
-\item \textbf{N-Version Programming} - Viacero verzií programu je vyvíjaných nezávisle a spúšťaných paralelne. Výsledky sú porovnávané a systém sa riadi podľa väčšinového rozhodnutia.
+\item \textbf{Recovery Blocks} \cite{lyu:sft} - Používajú hlavnú verziu kódu spolu s alternatívnymi blokmi, ktoré sa vykonajú, ak hlavná verzia zlyhá pri vopred definovanej kontrole správnosti (acceptance test).
+\item \textbf{N-Version Programming} \cite{aa:nvp} - Viacero verzií programu je vyvíjaných nezávisle a spúšťaných paralelne. Výsledky sú porovnávané a systém sa riadi podľa väčšinového rozhodnutia.
 \end{itemize}
 
 \subsection*{Dátová diverzita (Data Diversity)}
 
-Na rozdiel od kódovej redundancie sa dátová diverzita zameriava na zmenu vstupných dát rôznymi spôsobmi (napr. reexpresia), čím sa znižuje pravdepodobnosť, že chyba ovplyvní všetky varianty rovnakým spôsobom. Táto technika je často využívaná ako doplnok k iným formám redundancie.
+Na rozdiel od kódovej redundancie sa dátová diverzita zameriava na zmenu vstupných dát rôznymi spôsobmi (napr. reexpresia), čím sa znižuje pravdepodobnosť, že chyba ovplyvní všetky varianty rovnakým spôsobom. Táto technika je často využívaná ako doplnok k iným formám redundancie \cite{nasa:datadiversity}.
 
 \subsection*{Predchádzajúce práce a inšpirácie}
 
 V tejto práci boli analyzované a čiastočne implementované aj niektoré známe softvérové techniky z predchádzajúceho výskumu:
 
 \begin{itemize}
-\item \textbf{EDDI (Error Detection by Duplicated Instructions)} - Softvérová metóda založená na duplikácii inštrukcií a porovnávaní výsledkov na detekciu chýb v behu programu.
-\item \textbf{CFCSS (Control Flow Checking by Software Signatures)} - Technika overovania správnosti tokov riadenia pomocou generovania a porovnávania podpisov pre jednotlivé časti kódu.
-\item \textbf{SWIFT (Software-Implemented Fault Tolerance)} - Pokročilý prístup kombinujúci duplikáciu inštrukcií, kontrolu tokov riadenia a optimalizácie zamerané na zníženie režijných nákladov.
+\item \textbf{EDDI (Error Detection by Duplicated Instructions)} \cite{eddi} - Softvérová metóda založená na duplikácii inštrukcií a porovnávaní výsledkov na detekciu chýb v behu programu.
+\item \textbf{CFCSS (Control Flow Checking by Software Signatures)} \cite{994926} - Technika overovania správnosti tokov riadenia pomocou generovania a porovnávania podpisov pre jednotlivé časti kódu.
+\item \textbf{SWIFT (Software-Implemented Fault Tolerance)}\cite{swift} - Pokročilý prístup kombinujúci duplikáciu inštrukcií, kontrolu tokov riadenia a optimalizácie zamerané na zníženie režijných nákladov.
 \end{itemize}
 
 Tieto metódy tvoria základ pre návrh a výber konkrétnych prístupov, ktoré boli implementované a testované v praktickej časti tejto práce.
 
-Rust je moderný programovací jazyk, ktorý bol v tejto práci zvolený pre implementáciu odolnosti voči chybám kvôli svojim jedinečným vlastnostiam. Je navrhnutý s dôrazom na bezpečnosť už pri preklade kódu - napríklad pomocou tzv. vlastníckeho modelu, ktorý zabraňuje typickým chybám ako dereferencovanie neplatného ukazovateľa alebo súbežný prístup k premennej. Okrem toho ponúka robustný systém spracovania chýb, kde každá funkcia môže vracať informáciu o chybe ako hodnotu, čím umožňuje jednoduchú detekciu zlyhaní bez nutnosti špeciálnych nástrojov. Rust tiež disponuje pokročilým makro systémom, ktorý umožňuje generovanie a úpravu kódu pred samotnou kompiláciou - čo sa v tejto práci využilo pri implementácii techniky CFCSS. Zároveň ponúka nízkoúrovňový prístup porovnateľný s jazykom C a jednoduchú integráciu s existujúcimi C knižnicami, čo umožnilo prepojenie Rust kódu s FreeRTOS, ktorý je napísaný práve v C. Vďaka týmto vlastnostiam je Rust silným kandidátom pre vývoj spoľahlivého softvéru v zabudovaných systémoch.
+\subsection*{Programovacý jazyk Rust}
 
-Táto práca bola vyvíjaná pre 32-bitové RISC-V jadro bežiace v simulovanom prostredí s 1MB pamäťou RAM, z ktorej bolo 8KB vyhradených pre zásobník a ďalších 8KB pre haldu. Systém využíva jadro FreeRTOS, ktoré je vhodné pre prostredia s obmedzenými zdrojmi. FreeRTOS spravuje spúšťanie úloh (tasks) pomocou plánovača a hardvérového prerušenia typu \textit{Machine Timer Interrupt}. Na systémové operácie sa používajú softvérové výnimky spúšťané cez inštrukciu \texttt{ecall}. Všetky prerušenia sú obsluhované pomocou vektorovej tabuľky, ktorá efektívne presmeruje vykonávanie do správnej obslužnej rutiny. Na integráciu Rustu s FreeRTOS sme použili knižnicu \texttt{FreeRTOS-Rust}, ktorá poskytuje prepojenie s C kódom. Keďže náš simulovaný systém nevyžaduje podporu atómových inštrukcií, ktoré pôvodná knižnica vyžadovala, boli tieto časti nahradené ne-atómovými verziami. Okrem toho sme použili \texttt{riscv} knižnicu pre Rust, ktorá zabezpečuje preklad pre RISC-V platformu a poskytuje nástroje na prácu s registrami a obsluhou prerušení. Z dôvodu výkonovej optimalizácie sme odstránili časť kódu, ktorá pred spustením programu nulovala statické premenné (\acrshort{bss} segment), keďže Rust garantuje inicializáciu premenných už pri kompilácii. Tým sa znížilo zaťaženie procesora a obmedzila sa pravdepodobnosť výskytu chýb počas štartu programu.
+Ako už bolo spomínané, implementácia bola uskutočnená pomocou programovacieho jazyka Rust. Rust je moderný jazyk, ktorý bol v tejto práci zvolený pre implementáciu odolnosti voči chybám kvôli svojim jedinečným vlastnostiam. Je navrhnutý s dôrazom na bezpečnosť už pri preklade kódu - napríklad pomocou tzv. \textit{ownership and borrowing} modelu \cite{rust_book:ownership}, ktorý zabraňuje typickým chybám ako dereferencovanie neplatného ukazovateľa alebo súbežný prístup k premennej. Okrem toho ponúka robustný systém spracovania chýb, kde každá funkcia môže vracať informáciu o chybe ako hodnotu, čím umožňuje jednoduchú detekciu zlyhaní bez nutnosti špeciálnych nástrojov. Rust tiež disponuje pokročilým makro systémom, ktorý umožňuje generovanie a úpravu kódu pred samotnou kompiláciou - čo sa v tejto práci využilo pri implementácii techniky CFCSS. Zároveň ponúka nízkoúrovňový prístup porovnateľný s jazykom C a jednoduchú integráciu s existujúcimi C knižnicami, čo umožnilo prepojenie Rust kódu s FreeRTOS, ktorý je napísaný práve v C. Vďaka týmto vlastnostiam je Rust silným kandidátom pre vývoj spoľahlivého softvéru v zabudovaných systémoch. Viac o Rust-e sa dá nájsť v oficiálnej dokumentácii\footnote{\url{https://doc.rust-lang.org/book/}}.
 
-Jednou z hlavných súčastí navrhnutého systému odolnosti voči chybám je mechanizmus \textit{checkpoint and restart}, ktorý umožňuje obnoviť program do predchádzajúceho stabilného stavu po zistení chyby. Funguje tak, že si počas vykonávania programu uloží aktuálny stav registrov (x1 až x31) a návratovú adresu do špeciálnej pamäťovej oblasti, čím vytvorí tzv. checkpoint. Po detekcii chyby – či už prostredníctvom výnimky procesora alebo softvérového overenia – sa systém vráti späť na tento bod a pokúsi sa znova vykonať daný úsek kódu. Implementácia využíva statickú pamäť pre posledný checkpoint a zásobník pre staršie, čo umožňuje vnorené checkpointy. Výhodou tohto riešenia je nízka režijná záťaž (približne 400 inštrukcií bez optimalizácií) a flexibilita pri kombinácii s inými technikami. Nevýhodou však je, že systém neukladá dáta mimo registrov, teda napríklad zásobník, haldu alebo globálne premenné. Ak sa v checkpoint blokoch vykonajú zmeny mimo sféru zotavenia, tieto sa pri návrate späť nevrátia do pôvodného stavu. Preto je vhodné tento mechanizmus kombinovať s doplnkovými technikami ochrany premenných (viď sekcia \ref{sec:var_protection}). Celkovo checkpoint systém slúži ako základná infraštruktúra pre budovanie robustnejších stratégií zotavenia.
+\subsection*{Prostredie}
 
-Implementácia CFCSS v tejto práci využíva Rust makrá namiesto klasického prístupu na úrovni inštrukcií alebo LLVM IR. Každá funkcia v chránenom module je považovaná za blok s jedinečným podpisom, pričom kontrolný graf medzi blokmi sa vytvára počas prekladu. Na základe tohto grafu sa počas behu sleduje tzv. runtime podpis, ktorý sa aktualizuje pri každom skoku podľa rozdielu medzi blokmi. Ak runtime podpis nesúhlasí s očakávaným podpisom bloku, deteguje sa chyba v riadení toku programu. Problémom sú tzv. fan-in bloky (viacero predchodcov), pre ktoré sa zavádzajú tzv. adjustéry podpisov. Implementácia v Ruste generuje všetky potrebné kontrolné premenne počas prekladu a vkladá inštrukcie pred aj za každý blok. Približne 100 dodatočných inštrukcií je vložených na každú funkciu, čo môže ovplyvniť výkon. Výhodou je však kontrola nad rozsahom ochrany – čím viac funkcií, tým vyššia miera kontroly, ale aj vyššia režijná záťaž. Táto verzia CFCSS však nie je taká presná ako implementácia na úrovni LLVM IR, kde je možné presnejšie vkladať kontrolné inštrukcie po každom skoku. Navyše, CFCSS nie je kompatibilný s mechanizmom checkpoint and restart, pretože závisí na statických premenných, ktoré nie sú obnovované pri návrate na checkpoint, čím by došlo k narušeniu kontrolného mechanizmu.
+Táto práca bola vyvíjaná pre 32-bitové RISC-V jadro bežiace v simulovanom prostredí s 1MB pamäťou RAM, z ktorej bolo 8KB vyhradených pre zásobník a ďalších 8KB pre haldu. Systém využíva jadro FreeRTOS, ktoré je vhodné pre prostredia s obmedzenými zdrojmi. FreeRTOS spravuje spúšťanie úloh (tasks) pomocou plánovača a hardvérového prerušenia typu \textit{Machine Timer Interrupt}. Na systémové operácie sa používajú softvérové výnimky spúšťané cez inštrukciu \texttt{ecall}. Všetky prerušenia sú obsluhované pomocou vektorovej tabuľky, ktorá efektívne presmeruje vykonávanie do správnej obslužnej rutiny \cite{riscv:manual}. Na integráciu Rustu s FreeRTOS sme použili knižnicu \texttt{FreeRTOS-Rust}\footnote{\url{https://github.com/lobaro/FreeRTOS-rust}}, ktorá poskytuje prepojenie s C kódom. Keďže náš simulovaný systém nevyžaduje podporu atómových inštrukcií, ktoré pôvodná knižnica vyžadovala, boli tieto časti nahradené ne-atómovými verziami. Okrem toho sme použili \texttt{riscv}\footnote{\url{https://github.com/rust-embedded/riscv}} knižnicu pre Rust, ktorá zabezpečuje preklad pre RISC-V platformu a poskytuje nástroje na prácu s registrami a obsluhou prerušení. Z dôvodu výkonovej optimalizácie sme odstránili časť kódu, ktorá pred spustením programu nulovala statické premenné (\acrshort{bss} segment), keďže Rust garantuje inicializáciu premenných už pri kompilácii. Tým sa znížilo zaťaženie procesora a obmedzila sa pravdepodobnosť výskytu chýb počas štartu programu.
 
-Testovanie implementovaných techník bolo vykonané pomocou nástroja Hardisc – simulátora odolného RISC-V jadra so schopnosťou vkladať poruchy vo forme bit-flipov počas behu programu. Po úvodnom oneskorení 36 000 cyklov (na inicializáciu FreeRTOS) boli chyby vkladané každých približne 2500 cyklov, pričom sa mohlo v rámci jedného benchmarku objaviť až 100 porúch. Poruchy boli vkladané iba do registrov a častí vykonávacej pipeline (GPR, ALU, RFC, MDU, DP, TP), pamäť RAM bola z testovania vynechaná, keďže softvérové mechanizmy nie sú schopné opraviť trvalé chyby v inštrukciách uložených v RAM. Testovanie prebiehalo na piatich benchmarkoch, z ktorých každý reprezentoval bežné operácie v embedded systémoch (napr. výpočty, triedenie), pričom NFC (Nested Function Calls) bol špeciálne zvolený na testovanie techniky CFCSS. Výsledky ukázali, že zapnutá ochrana výrazne zvýšila schopnosť detekovať chyby a minimalizovala počet neobslúžených chýb a timeoutov, aj keď zlepšenie v správnosti výpočtov bolo mierne. Merania výkonu prebehli na bezchybnom jadre a ukázali nárast počtu CPU cyklov o 10–33 \%, pričom vyšší nárast bol zaznamenaný pri benchmarkoch s komplexnejšou štruktúrou riadenia programu. Nakoniec sa hodnotil aj dopad na veľkosť binárneho súboru – v neoptimalizovanej verzii narastol o vyše 40 \%, zatiaľ čo pri použití kompilátorových optimalizácií len o 9 \%. Avšak optimalizácie môžu narušiť správne fungovanie ochranných mechanizmov, keďže môžu zmeniť poradie inštrukcií. Preto je ich použitie v kontexte odolného softvéru potrebné starostlivo zvážiť.
+\subsection*{Implementácia}
 
-Cieľom tejto diplomovej práce bolo analyzovať, implementovať a testovať rôzne softvérové metódy tolerancie na chyby s cieľom zlepšiť spoľahlivosť embedded systémov. Po analýze niekoľkých techník, ako sú generalizované metódy jedného a viacerých verzií, CFCSS, EDDI a SWIFT, boli vybrané na implementáciu techniky ako checkpoint/restart mechanizmy, overenie integrity riadiaceho toku, stratégie ochrany premenných a multiverzné programovanie. Tieto metódy boli implementované v Rust-e a testované na platforme 32-bitového RISC-V simulátora v prostredí FreeRTOS.
+Jednou z hlavných súčastí navrhnutého systému odolnosti voči chybám je mechanizmus \textit{checkpoint and restart}, ktorý umožňuje obnoviť program do predchádzajúceho stabilného stavu po zistení chyby. Funguje tak, že si počas vykonávania programu uloží aktuálny stav registrov (x1 až x31) a návratovú adresu do špeciálnej pamäťovej oblasti, čím vytvorí tzv. checkpoint. Po detekcii chyby - či už prostredníctvom výnimky procesora alebo softvérového overenia - sa systém vráti späť na tento bod a pokúsi sa znova vykonať daný úsek kódu. Implementácia využíva statickú pamäť pre posledný checkpoint a zásobník pre staršie, čo umožňuje vnorené checkpointy. Výhodou tohto riešenia je nízka režijná záťaž (približne 400 inštrukcií bez optimalizácií) a flexibilita pri kombinácii s inými technikami. Nevýhodou však je, že systém neukladá dáta mimo registrov, teda napríklad zásobník, heap alebo globálne premenné. Ak sa v checkpoint blokoch vykonajú zmeny mimo sféru zotavenia, tieto sa pri návrate späť nevrátia do pôvodného stavu. Preto je vhodné tento mechanizmus kombinovať s doplnkovými technikami ochrany premenných (viď sekcia \ref{sec:var_protection}). Celkovo checkpoint systém slúži ako základná infraštruktúra pre budovanie robustnejších stratégií zotavenia.
 
-Implementácia checkpoint/restart sa ukázala ako veľmi spoľahlivá a efektívna na obnovu po chybách. CFCSS, realizovaný pomocou Rust makier, bol úspešný, no limitovaný len na určité moduly. Vyskytli sa problémy s kompatibilitou CFCSS a checkpoint/restart kvôli statickým premenným. Multi-verzné techniky boli implementované, ale často spôsobovali vyššie časové nároky bez výrazného zlepšenia.
+Implementácia CFCSS v tejto práci využíva Rust makrá namiesto klasického prístupu na úrovni inštrukcií alebo LLVM IR. Každá funkcia v chránenom module je považovaná za blok s jedinečným podpisom, pričom kontrolný graf medzi blokmi sa vytvára počas prekladu. Na základe tohto grafu sa počas behu sleduje tzv. runtime podpis, ktorý sa aktualizuje pri každom skoku podľa rozdielu medzi blokmi. Ak runtime podpis nesúhlasí s očakávaným podpisom bloku, deteguje sa chyba v riadení toku programu. Problémom sú tzv. fan-in bloky (viacero predchodcov), pre ktoré sa zavádzajú tzv. adjustéry podpisov. Implementácia v Ruste generuje všetky potrebné kontrolné premenne počas prekladu a vkladá inštrukcie pred aj za každý blok. Približne 100 dodatočných inštrukcií je vložených na každú funkciu, čo môže ovplyvniť výkon. Výhodou je však kontrola nad rozsahom ochrany - čím viac funkcií, tým vyššia miera kontroly, ale aj vyššia režijná záťaž. Táto verzia CFCSS však nie je taká presná ako implementácia na úrovni LLVM IR, kde je možné presnejšie vkladať kontrolné inštrukcie po každom skoku. Navyše, CFCSS nie je kompatibilný s mechanizmom checkpoint and restart, pretože závisí na statických premenných, ktoré nie sú obnovované pri návrate na checkpoint, čím by došlo k narušeniu kontrolného mechanizmu.
 
-Záverom, softvérové techniky tolerancie na chyby zlepšili úspešnosť testov, znížili počet timeoutov a zvýšili detekciu chýb. Budúci výskum by mohol zahŕňať hybridné prístupy kombinujúce techniky na úrovni kódu s tými implementovanými v kompilátore.
+\subsection*{Testovanie}
+
+Testovanie implementovaných techník bolo vykonané pomocou nástroja Hardisc\footnote{\url{https://github.com/janomach/the-hardisc}} - simulátora odolného RISC-V jadra so schopnosťou vkladať poruchy vo forme bit-flipov počas behu programu. Po úvodnom oneskorení 36 000 cyklov (na inicializáciu FreeRTOS) boli chyby vkladané každých približne 2500 cyklov, pričom sa mohlo v rámci jedného benchmarku objaviť až 100 porúch. Poruchy boli vkladané iba do registrov a častí vykonávacej pipeline (GPR, ALU, RFC, MDU, DP, TP), pamäť RAM bola z testovania vynechaná, keďže softvérové mechanizmy nie sú schopné opraviť trvalé chyby v inštrukciách uložených v RAM. Testovanie prebiehalo na piatich benchmarkoch, z ktorých každý reprezentoval bežné operácie v embedded systémoch (napr. výpočty, triedenie), pričom NFC (Nested Function Calls) bol špeciálne zvolený na testovanie techniky CFCSS. Výsledky ukázali, že zapnutá ochrana výrazne zvýšila schopnosť detekovať chyby a minimalizovala počet neobslúžených chýb a timeoutov, aj keď zlepšenie v správnosti výpočtov bolo mierne. Merania výkonu prebehli na bezchybnom jadre a ukázali nárast počtu CPU cyklov o 10-33 \%, pričom vyšší nárast bol zaznamenaný pri benchmarkoch s komplexnejšou štruktúrou riadenia programu. Nakoniec sa hodnotil aj dopad na veľkosť binárneho súboru - v neoptimalizovanej verzii narastol o vyše 40 \%, zatiaľ čo pri použití kompilátorových optimalizácií len o 9 \%. Avšak optimalizácie môžu narušiť správne fungovanie ochranných mechanizmov, keďže môžu zmeniť poradie inštrukcií. Preto je ich použitie v kontexte odolného softvéru potrebné starostlivo zvážiť.
+
+\subsection*{Zhodnotenie}
+
+Cieľom tejto diplomovej práce bolo analyzovať, implementovať a testovať rôzne softvérové metódy tolerancie na chyby s cieľom zlepšiť spoľahlivosť embedded systémov. Po analýze niekoľkých techník, ako sú generalizované metódy jedného a viacerých verzií, CFCSS, EDDI a SWIFT, boli vybrané na implementáciu techniky ako checkpoint and restart mechanizmy, overenie integrity riadiaceho toku, stratégie ochrany premenných a multiverzné programovanie. Tieto metódy boli implementované v Rust-e a testované na platforme 32-bitového RISC-V simulátora v prostredí FreeRTOS.
+
+Implementácia checkpoint and restart sa ukázala ako veľmi spoľahlivá a efektívna na obnovu po chybách. CFCSS, realizovaný pomocou Rust makier, bol úspešný, no limitovaný len na určité moduly. Vyskytli sa problémy s kompatibilitou CFCSS a checkpoint and restart kvôli statickým premenným. Multi-verzné techniky boli implementované, ale často spôsobovali vyššie časové nároky bez výrazného zlepšenia.
+
+Záverom, softvérové techniky tolerancie na chyby zlepšili úspešnosť testov, znížili počet timeoutov a zvýšili detekciu chýb. Dá sa teda povedať, že implementované softvérové zabezpečenie má pozitívny vplyv na korektnosť programu. Budúci výskum by mohol zahŕňať hybridné prístupy kombinujúce techniky softvérového zabezpečenia implementovaného v kóde, so zabezpečením implementovaným priamo do Rust kompilátoru alebo LLVM.
 
 
 
