--- a/src/analysis/prior_work.tex
+++ b/src/analysis/prior_work.tex
@@ -19,5 +19,5 @@ At runtime, the control flow is validated using a designated \acrfull{gpr}, whic
 
 \subsubsection{SWIFT}
 
-\acrfull{swift} \cite{swift} (Software Implemented Fault Tolerance) is a compiler-based technique for detecting transient faults using software-only transformations, without requiring any specialized hardware. It builds upon earlier methods like \acrshort{eddi} by duplicating instructions and inserting validation checks, but improves upon them with several key optimizations to reduce memory and performance overhead. Unlike \acrshort{eddi}, \acrshort{swift} excludes memory from the \textit{sphere of replication} (the logical boundary within which
+\acrfull{swift} \cite{swift} is a compiler-based technique for detecting transient faults using software-only transformations, without requiring any specialized hardware. It builds upon earlier methods like \acrshort{eddi} by duplicating instructions and inserting validation checks, but improves upon them with several key optimizations to reduce memory and performance overhead. Unlike \acrshort{eddi}, \acrshort{swift} excludes memory from the \textit{sphere of replication} (the logical boundary within which
 all states are logically or physically replicated \cite{shubu}), assuming protection is already provided by \acrshort{ecc} in modern systems. It introduces an enhanced control-flow checking mechanism using software signatures, allowing it to detect illegal control transfers more reliably. Additionally, \acrshort{swift} incorporates optimizations such as restricting signature checks to store-containing blocks and eliminating redundant branch validation. These design decisions enable \acrshort{swift} to achieve high fault tolerance with lower execution and code size overhead.
