--- a/src/annotation.tex
+++ b/src/annotation.tex
@@ -21,7 +21,7 @@ Supervisor: \mySupervisor
 
 \bigskip{}
 
-This thesis explores software-implemented fault tolerance for embedded systems, with a particular focus on solutions that do not require specialized or redundant hardware. As embedded systems grow increasingly complex and are deployed in harsher or more unpredictable environments, the risk of system failure rises accordingly. Traditional approaches to fault tolerance often rely on hardware redundancy, such as error-correcting memory or replicated components, which significantly increases development cost, power consumption, and physical space requirements. In contrast, this research investigates software-only techniques that can detect, mitigate, or recover from faults without the need for specialized hardware. The study examines various software fault-tolerance techniques and evaluates their trade-offs in terms of reliability, performance overhead, and implementation complexity. A practical case study is presented using the Rust programming language and the FreeRTOS real-time operating system on a RISC-V embedded platform. Through empirical testing of selected techniques under simulated fault conditions, the findings demonstrate that software-based fault tolerance can provide a meaningful level of protection, particularly for non-critical applications.
+This thesis explores software-implemented fault tolerance for embedded systems, with a particular focus on solutions that do not require specialized or redundant hardware. As embedded systems grow increasingly complex and are deployed in harsher or more unpredictable environments, the risk of system failure rises accordingly. Traditional approaches to fault tolerance often rely on hardware redundancy, such as error-correcting memory or replicated components, which significantly increases development cost, power consumption, and physical space requirements. In contrast, this research investigates software-only techniques that can detect, mitigate, or recover from faults without the need for specialized hardware. The study examines various software fault-tolerance techniques and evaluates their trade-offs in terms of reliability, performance overhead, and implementation complexity. A practical case study is presented using the Rust programming language and the FreeRTOS real-time operating system on a simulated RISC-V platform with fault insertion capability. Through testing of selected techniques under simulated fault conditions, the findings demonstrate that software-based fault tolerance can provide a meaningful level of protection, particularly for non-critical applications.
 
 \thispagestyle{empty}
 \mbox{}
@@ -48,9 +48,8 @@ Vedúci bakalárskej práce: \mySupervisor
 
 \bigskip{}
 
-Táto bakalárska práca sa zaoberá softvérovo implementovanou odolnosťou voči poruchám vo vstavaných systémoch, so zvláštnym zameraním na riešenia, ktoré nevyžadujú špecializovaný alebo redundantný hardvér. S rastúcou zložitosťou zabudovaných systémov a ich nasadzovaním v náročnejších a menej predvídateľných prostrediach sa zvyšuje aj riziko zlyhania systému. Tradičné prístupy k odolnosti voči poruchám sa často spoliehajú na hardvérovú redundanciu, ako sú pamäte s korekciou chýb alebo duplikované komponenty, čo výrazne zvyšuje náklady na vývoj, spotrebu energie a nároky na fyzický priestor.
-
-Táto práca skúma výlučne softvérové techniky, ktoré dokážu poruchy detegovať, zmierniť ich dopad alebo sa z nich zotaviť bez potreby špecializovaného hardvéru. Štúdia analyzuje rôzne softvérové prístupy k zabezpečeniu odolnosti voči poruchám a hodnotí ich kompromisy z hľadiska spoľahlivosti, výkonnostnej záťaže a zložitosti implementácie. Praktická demonštrácia využíva programovací jazyk Rust a real-time operačný systém FreeRTOS na platforme RISC-V. Pomocou empirických testov vybraných techník v simulovaných poruchových podmienkach práca ukazuje, že softvérovo implementovaná odolnosť voči poruchám môže poskytnúť zmysluplnú úroveň ochrany, najmä pre nekritické aplikácie.
+Táto práca sa zaoberá softvérovo implementovanou odolnosťou voči poruchám vo vnorených systémoch, so zameraním na riešenia, ktoré nevyžadujú špecializovaný alebo redundantný hardvér. S rastúcou zložitosťou vnorených systémov a ich nasadzovaním v náročnejších a menej predvídateľných prostrediach sa zvyšuje aj riziko zlyhania systému. Tradičné prístupy k odolnosti voči poruchám sa často spoliehajú na hardvérovú redundanciu, ako sú pamäte s korekciou chýb alebo duplikované komponenty, čo výrazne zvyšuje náklady na vývoj, spotrebu energie a nároky na fyzický priestor.
+Táto práca skúma výlučne softvérové techniky, ktoré dokážu poruchy detegovať, zmierniť ich dopad alebo sa z nich zotaviť bez potreby špecializovaného hardvéru. Štúdia analyzuje rôzne softvérové prístupy k zabezpečeniu odolnosti voči poruchám a hodnotí ich z hľadiska spoľahlivosti, výkonnostnej záťaže a zložitosti implementácie. Praktická demonštrácia využíva programovací jazyk Rust a real-time operačný systém FreeRTOS na simulovanej platforme RISC-V. Pomocou testov vybraných techník v simulovaných poruchových podmienkach práca ukazuje, že softvérovo implementovaná odolnosť voči poruchám môže poskytnúť zmysluplnú úroveň ochrany, najmä pre nekritické aplikácie.
 
 \clearpage
 
