--- a/src/implementation/checkpoint.tex
+++ b/src/implementation/checkpoint.tex
@@ -1,6 +1,6 @@
 \subsection{Checkpoint and restart}
 
-Checkpoint and restart system is the backbone of our fault-toleranace framework, facilitating recovery. It can be used on its own to provide basic level of redundancy, or it can be combined with other techniques to boost their fault-tolerance potential. The implementation is partially inspired by \textit{libft} C library mentioned in \cite{libft}.
+Checkpoint and restart system is the backbone of our fault-toleranace framework, facilitating backward recovery. It can be used on its own to provide basic level of redundancy, or it can be combined with other techniques to boost their fault-tolerance potential. The implementation is partially inspired by \textit{libft} C library mentioned in \cite{libft}.
 
 \subsubsection{Creating a checkpoint} \label{sec:creating_checkpoint}
 
