--- a/src/analysis/data_diversity.tex
+++ b/src/analysis/data_diversity.tex
@@ -8,7 +8,7 @@ In many situations only very specific conditions will result in an error, we cal
  
 \subsubsection{Data reexpression}
 
-Data reexpression is generation of logically equivalent data sets. Any mapping of a program's data that preserves the information content of the data is a valid reexpression algorithm. A simple approximate data reexpression algorithm for a floating-point quantity might alter its value by a small percentage. Similar concept can also be found in \textit{approximate computing} \cite{approxcomp}. The allowable percentage by which the data value could be altered would be determined by the application. In applications that process sensor data, for example, the accuracy of the data is often poor and deliberate small changes are unlikely to affect performance \cite{nasa:datadiversity}. 
+Data reexpression is generation of logically equivalent data sets. Any mapping of a program's data that preserves the information content of the data is a valid reexpression algorithm \cite{nasa:datadiversity}. A simple approximate data reexpression algorithm for a floating-point quantity might alter its value by a small percentage. Similar concept can also be found in \textit{approximate computing} \cite{approxcomp}. The allowable percentage by which the data value could be altered would be determined by the application. In applications that process sensor data, for example, the accuracy of the data is often poor and deliberate small changes are unlikely to affect performance \cite{nasa:datadiversity}. 
 
 % \begin{figure}[hbt]
 %     \centering
