--- a/src/nomenclature.tex
+++ b/src/nomenclature.tex
@@ -1,10 +1,10 @@
 
-For the sake of consistency in the terms used in this document, we will refer to the naming conventions and definitions as outlined in \cite{1335465}. Below are the definitions of the most crucial, widely used, terms used. Other specific terms will be defined on per-need basis throughout the thesis.
+For the sake of consistency in the terms used in this document, we will refer to the naming conventions and definitions as outlined in \cite{1335465}. Below are the definitions of the most crucial terms used. Other specific terms will be defined on per-need basis throughout the thesis.
 
 A \textbf{service} refers to the intended function delivered to the user by some system. An example could be a remote thermometer delivering correct temperature readings.
 The \textbf{system} encompasses all components necessary to deliver this service, including the processor with its internal elements, I/O peripherals, sensors, and the associated program code. For instance, a microprocessor with temperature sensors and I/O elements. 
 Everything that is considered as a part of this system lies within the \textbf{system boundary}. This boundary can be thought as an imaginary partition separating our system from the environment.  
 
-\textbf{Failure} is an event that occurs when the service permanently deviates from correct functioning. A service failure is a transition from correct service to incorrect service, i.e., to not implementing the system function \cite{1335465}. For example, a failure might occur if an I/O component ceases to communicate with the system. Failures are usually caused by an \textbf{error}, which is a deviation of the service from its correct state. It is a part of the system's state that may lead to service failure \cite{1335465}. Errors are the observable result of issues within the software and or hardware, for example, an unexpected change to the output variables. This unexpected change is commonly caused by a \textbf{fault}, which is the actual or hypothesized cause of an error. Faults are usually considered dormant until manifested, causing an error \cite{1335465}. An example being a bit-flip in memory caused by radiation. 
+\textbf{Failure} is an event that occurs when the service permanently deviates from correct functioning. A service failure is a transition from correct service to incorrect service, i.e., to not implementing the system function \cite{1335465}. For example, a failure might occur if an I/O component ceases to communicate with the system. Failures are usually caused by an \textbf{error}, which is a deviation of the service from its correct state. It is a part of the system's state that may lead to service failure \cite{1335465}. Errors are the observable result of issues within the software and or hardware, for example, an unexpected change to the output variables. This unexpected change is commonly caused by a \textbf{fault}, which is the actual or hypothesized cause of an error \cite{shubu}. Faults are usually considered dormant until manifested, causing an error \cite{1335465}. An example being a bit-flip in memory caused by radiation. 
 
 Being able to detect and tolerate errors originating from faults is the topic of this thesis and is commonly referred to as \textbf{fault tolerance}. Fault tolerance refers to the system's ability to continue functioning correctly despite the presence of faults. For example a system delivering service correctly with one of its sensors not responding. Sometimes, the fault might lead to the system not fully meeting its functional requirements, however, it might still be usable to certain extent. This is referred to as \textbf{service degradation}, an example of which could be decreasing the frequency of sensor readings, or reporting approximate data.
